# Copyright (c) 2018 Lydia Simmons
# This software is licensed under the GNU General Public License v3.0.
# See the LICENSE file in this distribution for license terms.

[package]
name = "gabc-converter"
version = "0.1.0"
authors = ["Lydia Simmons"]
description = "A simple converter from gabc to JSON or Lilypond"
repository = "github.com/saybaar/gabc-converter"
license = "GPL-3.0-or-later"

[dependencies]
gabc-parser = "0.1.1"
serde_json = "1.0"
clap = "2.32.0"
